--- a/calendar_service/views/res_partner_view.xml
+++ b/calendar_service/views/res_partner_view.xml
@@ -12,7 +12,7 @@
                             class="oe_inline oe_stat_button"
                             attrs="{'invisible': [('customer', '=', False)]}"
                             name="%(calendar_service.action_calendar_service)d"
-                            icon="fa-star"
+                            icon="fa-home"
                             type="action"
                             context="{'search_default_partner_id': active_id}">
                             <field name="service_count" string="Services" widget="statinfo"/>
