--- a/calendar_service/views/calendar_service_view.xml
+++ b/calendar_service/views/calendar_service_view.xml
@@ -140,7 +140,7 @@
                     <sheet>
                         <div class="oe_title">
                             <label for="name" class="oe_edit_only"/>
-                            <h1><field name="name" attrs="{'readonly': [('state', '=', 'done')]}"/></h1>                            
+                            <h1><field name="name"/></h1>                            
                         </div>                        
                         <group>
                             <group>
