Implemented custom name_get methods for recurrent.rule and calendar.service.calendar

--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -27,6 +27,7 @@
                     <sheet>
                         <group>                        
                             <group>
+                                <field name="name"/>
                                 <field name="partner_id"/>
                             </group>
                             <group>
