Updated change rule and generate services methods

--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -93,6 +93,7 @@
                         <group>
                             <group>
                                 <field name="name"/>
+                                <field name="weeks"/>
                             </group>
                             <group>
                                 <field name="active"/>
