--- a/calendar_service/views/calendar_service_view.xml
+++ b/calendar_service/views/calendar_service_view.xml
@@ -116,6 +116,12 @@
             <field name="arch" type="xml">
                 <tree string="Service">
                     <field name="name"/>
+                    <field name="user_id"/>
+                    <field name="partner_id"/>
+                    <field name="start_time"/>
+                    <field name="end_time"/>
+                    <field name="work_type"/>
+                    <field name="state"/>
                 </tree>
             </field>
         </record>
