--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -71,6 +71,7 @@
                 <tree string="Recurrent Calendar">
                     <field name="name"/>
                     <field name="write_date"/>
+                    <field name="next_gen_time"/>
                 </tree>
             </field>
         </record>
@@ -97,6 +98,7 @@
                             </group>
                             <group>
                                 <field name="active"/>
+                                <field name="next_gen_time"/>
                             </group>
                         </group>
                         <group>
