--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -39,7 +39,7 @@
                                 <field name="cleaning_day"/>
                                 <field name="clean_time_from" widget="float_time"/>
                                 <field name="clean_time_to" widget="float_time"/>
-                                <field name="employee_ids" widget="many2many"/>
+                                <field name="employee_ids" widget="many2many_tags"/>
                             </tree>
                         </field>                    
                     </sheet>
